Added win message

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 #gameboard{
   width: 400px;
   height: 400px;
+  margin: 0 auto;
   display: grid;
   grid-template: repeat(3, 1fr) / repeat(3, 1fr);
 }
